Remove large shap_values.csv from git tracking and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ ml/data/processed/test_processed.csv
 
 # Models
 # Keep models if they are not too huge (CatBoost models are usually small enough)
+data/processed/shap_values.csv
